@@ -4,6 +4,9 @@ Version 1.5100: Sun Mar 22 2015
 - Fixed hang in pure Perl implementation for a malformed mbox file scenario.
   Thanks to Jason Brooks <jason@petting-zoo.org> for providing an mbox
   that found this bug.
+- Fixed $OLDSTDERR used only once warning.
+  https://rt.cpan.org/Ticket/Display.html?id=58053
+  Thanks to paul@city-fan.org for the bug report and patch.
 
 Version 1.5002: Sun Aug 9 2009
 - Disabled the grep interface, which has had some tricky bugs that I don't
